2006-05-12  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:
	* m4/gecko.m4:

	Update gecko version checks to detect also gecko 1.8.1.

2006-05-11  Christian Persch  <chpe@cvs.gnome.org>

	* src/bookmarks/ephy-bookmarks.c: (save_filter_local):

	Don't crash when saving bookmarks in case the zeroconf browsing
	failed.
	
2006-05-11  Christian Persch  <chpe@cvs.gnome.org>

	* src/bookmarks/ephy-bookmarks.c: (add_to_favorites), (resolve_cb),
	(browse_cb):

	Don't crash when adding zeroconf bookmarks while bookmarks are locked
	down. Bug #341379.

2006-04-28  Wouter Bolsterlee  <uws+gnome@xs4all.nl>

	* src/ephy-tab.c: (ephy_tab_file_monitor_cb),
	(ephy_tab_update_file_monitor):

	Backport from HEAD:
	Add support for local directory monitoring (in addition to
	local file monitoring). Bug #332049.

2006-04-25  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-tab.c: (ephy_tab_finalize), (ephy_tab_init),
	(ephy_tab_get_zoom), (_ephy_tab_get_id):
	* src/ephy-tab.h:
	* src/ephy-tabs-menu.c: (notebook_page_added_cb),
	(sync_active_tab):

	Make sure each tab has its own unique ID, so accel paths don't
	conflict between windows. Fixes bug #339548.

2006-04-19  Christian Persch  <chpe@cvs.gnome.org>

	* data/glade/prefs-dialog.glade:
	* src/prefs-dialog.c:

	Fix mnemonic activation of download path button. Bug #339139.

2006-04-13  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:
	* embed/mozilla/GtkNSSDialogs.cpp:

	Check for nsIMutableArray.h and include it if found. Fixes build with
	gecko trunk.

2006-04-13  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-main.c:

	Add -p as short option format for --private-instance.

2006-04-12  Christian Persch  <chpe@cvs.gnome.org>

	* src/languages.h:

	Add Esperanto (eo).

2006-04-10  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:
	
       Post-release version bump.

2006-04-10  Christian Persch  <chpe@cvs.gnome.org>

	=== Release 2.14.1 ===

	* NEWS:
	* configure.ac:
