@@ -102,3 +102,14 @@ EphySidebar::AddSearchEngine (const char *aEngineURL,
 
 	return NS_OK;
 }
+
+#ifdef HAVE_GECKO_1_8_1
+
+/* void addMicrosummaryGenerator (in string generatorURL); */
+NS_IMETHODIMP
+EphySidebar::AddMicrosummaryGenerator (const char *generatorURL)
+{
+	return NS_ERROR_NOT_IMPLEMENTED;
+}
+
+#endif /* HAVE_GECKO_1_8_1 */
