@@ -1,5 +1,11 @@
 2006-05-12  Christian Persch  <chpe@cvs.gnome.org>
 
+	* embed/mozilla/EphySidebar.cpp:
+
+	The API is also changed on 1.8 branch, adapt the #ifdef accordingly.
+
+2006-05-12  Christian Persch  <chpe@cvs.gnome.org>
+
 	* configure.ac:
 	* m4/gecko.m4:
 
